--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
   "name": "pkp-manager",
-  "displayName": "Pkp manager",
+  "displayName": "Lit Protocol PKP Manager",
   "version": "0.0.1",
   "description": "An extension for viewing and managing PKPs",
   "author": "andrew@litprotocol.com",
   "scripts": {
-    "dev": "plasmo dev",
+    "dev": "plasmo dev --verbose",
     "build": "plasmo build",
     "package": "plasmo package"
   },
   "dependencies": {
+    "@lit-protocol/contracts-sdk": "^6.4.10",
+    "@lit-protocol/core": "^6.4.10",
+    "@lit-protocol/lit-auth-client": "^6.4.10",
+    "@lit-protocol/lit-node-client": "^6.4.10",
+    "@simplewebauthn/browser": "^10.0.0",
+    "ethers": "5.7.2",
+    "metamask-extension-provider": "^5.0.0",
     "plasmo": "0.88.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "typestub-ipfs-only-hash": "^4.0.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
@@ -20,12 +28,32 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
     "prettier": "3.2.4",
+    "tailwindcss": "^3.4.10",
     "typescript": "5.3.3"
   },
   "manifest": {
     "host_permissions": [
       "https://*/*"
-    ]
+    ],
+    "web_accessible_resources": [
+      {
+        "resources": [
+          "lit-network-test.html",
+          "*.wasm"
+        ],
+        "matches": [
+          "<all_urls>"
+        ]
+      }
+    ],
+    "content_security_policy": {
+      "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
+    }
+  },
+  "chrome": {
+    "newtab": "newtab.html"
   }
 }
