--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "An extension for viewing and managing PKPs",
   "author": "andrew@litprotocol.com",
   "scripts": {
-    "dev": "plasmo dev --verbose",
+    "dev": "plasmo dev",
     "build": "plasmo build",
     "package": "plasmo package"
   },
@@ -14,10 +14,12 @@
     "@lit-protocol/core": "^6.4.10",
     "@lit-protocol/lit-auth-client": "^6.4.10",
     "@lit-protocol/lit-node-client": "^6.4.10",
+    "@plasmohq/messaging": "^0.6.2",
+    "@plasmohq/storage": "^1.12.0",
     "@simplewebauthn/browser": "^10.0.0",
     "ethers": "5.7.2",
     "metamask-extension-provider": "^5.0.0",
-    "plasmo": "0.88.0",
+    "plasmo": "^0.89.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typestub-ipfs-only-hash": "^4.0.0"
@@ -38,10 +40,12 @@
     "host_permissions": [
       "https://*/*"
     ],
+    "permissions": [
+      "identity"
+    ],
     "web_accessible_resources": [
       {
         "resources": [
-          "lit-network-test.html",
           "*.wasm"
         ],
         "matches": [
